```mermaid
classDiagram
    direction TB
    
    %% Memento Pattern Components for Y.Doc
    
    class YDoc {
        <<Originator>>
        -yText: Y.Text
        -state: any
        +getState() Y.Doc
        +setState(state: Uint8Array) void
        +toString() string
        +applyUpdate(update: Uint8Array) void
    }
    
    class Snapshot {
        <<Memento>>
        +id: string
        +timestamp: number
        +content: string
        +stateVector?: Uint8Array
        +update?: Uint8Array
        +metadata?: object
    }
    
    class SnapshotManager {
        <<Caretaker>>
        -doc: Y.Doc
        -yText: Y.Text
        -snapshots: Map~string, Snapshot~
        -autoSnapshotInterval: number
        -maxSnapshots: number
        -autoSnapshotTimer: NodeJS.Timeout
        -onSnapshotCallback?: function
        -logging: boolean
        +createSnapshot(metadata?: object) Snapshot
        +restoreSnapshot(snapshotId: string) boolean
        +restoreFromSnapshot(snapshot: Snapshot) boolean
        +getSnapshot(snapshotId: string) Snapshot
        +listSnapshots() Snapshot[]
        +deleteSnapshot(snapshotId: string) boolean
        +clearSnapshots() void
        +getSnapshotCount() number
        +startAutoSnapshot() void
        +stopAutoSnapshot() void
        +exportSnapshot(snapshotId: string) string
        +importSnapshot(json: string) Snapshot
        +destroy() void
    }
    
    class SnapshotManagerOptions {
        +doc: Y.Doc
        +yText: Y.Text
        +autoSnapshotInterval?: number
        +maxSnapshots?: number
        +onSnapshot?: function
        +logging?: boolean
    }
    
    class Y {
        <<external>>
        +encodeStateVector(doc: Y.Doc) Uint8Array
        +encodeStateAsUpdate(doc: Y.Doc) Uint8Array
        +applyUpdate(doc: Y.Doc, update: Uint8Array, origin?: string) void
    }
    
    %% Relationships
    SnapshotManager --> YDoc : manages state of
    SnapshotManager --> Snapshot : creates/stores/restores
    SnapshotManager ..> SnapshotManagerOptions : uses
    SnapshotManager ..> Y : uses (encodes/decodes state)
    YDoc --> Snapshot : state captured in
    Snapshot --> YDoc : state restored to
    
    %% Notes
    note for YDoc "Originator: The object whose state\nis saved and restored"
    note for Snapshot "Memento: Immutable snapshot of\nY.Doc state (content + CRDT state)"
    note for SnapshotManager "Caretaker: Manages snapshots,\ncreates mementos, restores state"
```

